--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   "lang": "en",
   "icons": [
     {
-      "src": "assets/images/colored-logo.png",
+      "src": "colored-logo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/images/colored-logo.png",
+      "src": "colored-logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -31,7 +31,7 @@
       "url": "/company-registration.html",
       "icons": [
         {
-          "src": "assets/images/colored-logo.png",
+          "src": "colored-logo.png",
           "sizes": "192x192"
         }
       ]
@@ -42,7 +42,7 @@
       "url": "/gst-registration.html",
       "icons": [
         {
-          "src": "assets/images/colored-logo.png",
+          "src": "colored-logo.png",
           "sizes": "192x192"
         }
       ]
